RESOLVED FIXED118518
AuthenticationMac.mm does not handle NSURLAuthenticationMethodNegotiate in WebCore::mac()
https://bugs.webkit.org/show_bug.cgi?id=118518
Summary AuthenticationMac.mm does not handle NSURLAuthenticationMethodNegotiate in We...
Jeff Miller
Reported 2013-07-09 13:51:39 PDT
AuthenticationMac.mm does not handle NSURLAuthenticationMethodNegotiate in WebCore::mac()
Attachments
Patch (1.71 KB, patch)
2013-07-09 13:54 PDT, Jeff Miller
ap: review+
Jeff Miller
Comment 1 2013-07-09 13:54:46 PDT
Jeff Miller
Comment 2 2013-07-09 14:01:17 PDT
Note You need to log in before you can comment on or make changes to this bug.