AuthenticationMac.mm does not handle NSURLAuthenticationMethodNegotiate in WebCore::mac() https://bugs.webkit.org/show_bug.cgi?id=118518

Reviewed by Alexey Proskuryakov.

* platform/network/mac/AuthenticationMac.mm:
(WebCore::mac):
Map ProtectionSpaceAuthenticationSchemeNegotiate to NSURLAuthenticationMethodNegotiate.

Canonical link: https://commits.webkit.org/136473@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152514 268f45cc-cd09-0410-ab3c-d52691b4dbfc