Source/WebCore/platform/network/mac/AuthenticationMac.mm
@@ -283,6 +283,9 @@ NSURLProtectionSpace *mac(const ProtectionSpace& coreSpace)
         case ProtectionSpaceAuthenticationSchemeNTLM:
             method = NSURLAuthenticationMethodNTLM;
             break;
+        case ProtectionSpaceAuthenticationSchemeNegotiate:
+            method = NSURLAuthenticationMethodNegotiate;
+            break;
 #if USE(PROTECTION_SPACE_AUTH_CALLBACK)
         case ProtectionSpaceAuthenticationSchemeServerTrustEvaluationRequested:
             method = NSURLAuthenticationMethodServerTrust;
